cabal-version:      3.0
name:               ghc-cpp
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alan Zimmerman
maintainer:         alan.zimm@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

Flag build-tool-depends
    Description: Use build-tool-depends
    Default: True

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GHC.Cpp.Lexer
                    , GHC.Cpp.Macro
                    , GHC.Cpp.Parse
                    , GHC.Cpp.ParserM
                    , GHC.Cpp.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      array,
                      transformers,
                      parsec,
                      ghc,
                      text,
                      bytestring,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010
    if flag(build-tool-depends)
      build-tool-depends: alex:alex >= 3.2.6, happy:happy >= 1.20.0
